# grocery-list-server

./: Cargo.toml  README.md  build.rs  db.json  db.json.debug
frontend/: index.html
frontend/css/: main.css
frontend/scripts/: app.js  prelude.js
src/: lists.rs  main.rs  routes.rs
