[package]
name = "grocery-list-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
lazy_static = "*"
actix-web = { version = "4.0.1", features = ["openssl"] }
actix-cors = "0.6.0-beta.2"
chrono = { version = "*", features = ["serde"] }
futures = "*"
env_logger = "*"
log = "*"
tokio = { version = "*", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
rand = { version = "*", features = ["small_rng"] }
ctrlc = "*"
actix-web-static-files = "4.0"
static-files = "0.2.1"

[build-dependencies]
static-files = "0.2.1"

[dependencies.uuid]
version = "1.1.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]